--- a/web/css/form.css
+++ b/web/css/form.css
@@ -1,19 +1,18 @@
-.row1{
-	outline: none;
-	margin: 15px 0 0px 15px;
-	overflow: auto;
-	padding-bottom: 15px;
-	height: 162px;
+.row1 {
+    /*height: 162px;*/
+    margin: 15px 0 0 15px;
+    outline: none;
+    overflow: auto;
+    padding-bottom: 15px;
 }
-.sky-form h4{
-	font-size: 1em;
-	font-weight: 500;
-	padding: 10px;
-	background: #464646;
-	text-transform: uppercase;
-	color: #fff;
+.sky-form h4 {
+    background: #464646;
+    color: #fff;
+    font-size: 1em;
+    font-weight: 500;
+    padding: 10px;
+    text-transform: uppercase;
 }
-
 .sky-form .input,
 .sky-form .select,
 .sky-form .textarea,
@@ -21,178 +20,173 @@
 .sky-form .checkbox,
 .sky-form .toggle,
 .sky-form .button {
-	position: relative;
-	display: block;
+    display: block;
+    position: relative;
 }
-
-/* radios and checkboxes */
-.sky-form .radio,.sky-form .checkbox {
-	outline: none;
-	border: none;
-	margin-bottom: 4px;
-	padding-left: 27px;
-	font-size: 14px;
-	line-height: 30px;
-	font-weight: 400;
-	color: #555555;
-	cursor: pointer;
-	text-transform: capitalize;
-	width: 100%;
+/* RADIOS AND CHECKBOXES */
+.sky-form .radio,
+.sky-form .checkbox {
+    border: none;
+    color: #555555;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 4px;
+    outline: none;
+    padding-left: 27px;
+    text-transform: capitalize;
+    width: 100%;
 }
-
 .sky-form .radio:last-child,
 .sky-form .checkbox:last-child {
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 .sky-form .radio input,
 .sky-form .checkbox input {
-	position: absolute;
-	left: -9999px;
+    left: -9999px;
+    position: absolute;
 }
 .sky-form .radio i,
 .sky-form .checkbox i {
-	position: absolute;
-	top: 9px;
-	left: 0;
-	display: block;
-	width: 13px;
-	height: 13px;
-	outline: none;
-	border-width: 2px;
-	border-style: solid;
-	background: #fff;
+    background: #fff;
+    border-style: solid;
+    border-width: 2px;
+    display: block;
+    height: 13px;
+    left: 0;
+    outline: none;
+    position: absolute;
+    top: 9px;
+    width: 13px;
 }
 .sky-form .radio i {
-	border-radius: 50%;
+    border-radius: 50%;
 }
 .sky-form .radio input + i:after,
 .sky-form .checkbox input + i:after {
-	position: absolute;
-	opacity: 0;
-	transition: opacity 0.1s;
-	-o-transition: opacity 0.1s;
-	-ms-transition: opacity 0.1s;
-	-moz-transition: opacity 0.1s;
-	-webkit-transition: opacity 0.1s;
+    -moz-transition: opacity 0.1s;
+    -ms-transition: opacity 0.1s;
+    opacity: 0;
+    -o-transition: opacity 0.1s;
+    position: absolute;
+    transition: opacity 0.1s;
+    -webkit-transition: opacity 0.1s;
 }
-
 .sky-form .radio input:checked + i:after,
 .sky-form .checkbox input:checked + i:after {
-	opacity: 1;
+    opacity: 1;
 }
-
 .sky-form .inline-group .radio,
 .sky-form .inline-group .checkbox {
-	float: left;
-	margin-right: 30px;
+    float: left;
+    margin-right: 30px;
 }
 .sky-form .inline-group .radio:last-child,
 .sky-form .inline-group .checkbox:last-child {
-	margin-bottom: 4px;
+    margin-bottom: 4px;
 }
 .sky-form .checkbox input + i:after {
-	content:'';
-	top: -1px;
-	left: -5px;
-	width: 15px;
-	height: 15px;
-	background: url(../images/b-arrow.png);
-	text-align: center;
-}
-.sky-form .checkbox input + i:after {
-  color:#fff;
+    background: url(../images/b-arrow.png);
+    color: #fff;
+    content: '';
+    height: 15px;
+    left: -5px;
+    text-align: center;
+    top: -1px;
+    width: 15px;
 }
 .sky-form .radio input:checked + i,
 .sky-form .checkbox input:checked + i,
 .sky-form .toggle input:checked + i {
-	border-color:#888;	
+    border-color: #888;
 }
-/*-- start scrollpane --*/
-.jspContainer{
-	overflow: hidden;
-	position: relative;
+/*-- START SCROLLPANE --*/
+.jspContainer {
+    overflow: hidden;
+    position: relative;
 }
-.jspPane{
-	position: absolute;
-	outline: none;
+.jspPane {
+    outline: none;
+    position: absolute;
 }
-.jspVerticalBar{
-	position: absolute;
-	top: 0;
-	right:40px;
-	width:3px;
-	height: 100%;
+.jspVerticalBar {
+    height: 100%;
+    position: absolute;
+    right: 40px;
+    top: 0;
+    width: 3px;
 }
-.jspHorizontalBar{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 16px;
-	background: red;
+.jspHorizontalBar {
+    background: red;
+    bottom: 0;
+    height: 16px;
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
-.jspCap{
-	display: none;
+.jspCap {
+    display: none;
 }
-.jspHorizontalBar .jspCap{
-	float: left;
+.jspHorizontalBar .jspCap {
+    float: left;
 }
-.jspTrack{
-	background: #f0f0f0;
-	position: relative;
+.jspTrack {
+    background: #f0f0f0;
+    position: relative;
 }
-.jspDrag{
-	background: #777777;
-	position: relative;
-	top: 0;
-	left: 0;
-	cursor: pointer;
+.jspDrag {
+    background: #777777;
+    cursor: pointer;
+    left: 0;
+    position: relative;
+    top: 0;
 }
-.jspHorizontalBar .jspTrack,.jspHorizontalBar .jspDrag{
-	float: left;
-	height: 100%;
+.jspHorizontalBar .jspTrack,.jspHorizontalBar .jspDrag {
+    float: left;
+    height: 100%;
 }
-.jspArrow{
-	background: #50506d;
-	text-indent: -20000px;
-	display: block;
-	cursor: pointer;
-	padding: 0;
-	margin: 0;
+.jspArrow {
+    background: #50506d;
+    cursor: pointer;
+    display: block;
+    margin: 0;
+    padding: 0;
+    text-indent: -20000px;
 }
-.jspArrow.jspDisabled{
-	cursor: default;
-	background: #80808d;
+.jspArrow.jspDisabled {
+    background: #80808d;
+    cursor: default;
 }
-.jspVerticalBar .jspArrow{
-	height: 16px;
+.jspVerticalBar .jspArrow {
+    height: 16px;
 }
-.jspHorizontalBar .jspArrow{
-	width: 16px;
-	float: left;
-	height: 100%;
+.jspHorizontalBar .jspArrow {
+    float: left;
+    height: 100%;
+    width: 16px;
 }
-.jspVerticalBar .jspArrow:focus{
-	outline: none;
+.jspVerticalBar .jspArrow:focus {
+    outline: none;
 }
-.jspCorner{
-	background: #eeeef4;
-	float: left;
-	height: 100%;
+.jspCorner {
+    background: #eeeef4;
+    float: left;
+    height: 100%;
 }
-@media screen and (max-width:1024px){
-	.sky-form h4 {
-		font-size: 0.95em;
-		padding: 8px;
-	}
+@media screen and (max-width:1024px) {
+    .sky-form h4 {
+        font-size: 0.95em;
+        padding: 8px;
+    }
 }
-@media screen and (max-width:640px){
-	.row1 {
-		margin: 10px 0 0px 10px;
-		padding-bottom: 5px;
-		height: 160px;
-	}
-	.sky-form .radio, .sky-form .checkbox {
-		font-size: 11px;
-	}
+@media screen and (max-width:640px) {
+    .row1 {
+        height: 160px;
+        margin: 10px 0 0 10px;
+        padding-bottom: 5px;
+    }
+    .sky-form .radio, .sky-form .checkbox {
+        font-size: 11px;
+    }
 }
