--- a/web/css/metro.css
+++ b/web/css/metro.css
@@ -1,161 +1,163 @@
-.metro{
-    position: relative;
+.metro {
+    background: #fff;
+    color: #898989;
     cursor: pointer;
-    font-weight:600;
-    background:#fff;
-    color:#898989;
-    -webkit-user-select: none;
+    font-weight: 600;
     -moz-user-select: none;
+    position: relative;
     user-select: none;
+    -webkit-user-select: none;
 }
-.metro.open{
+.metro.open {
     z-index: 2;
 }
 .metro:hover,
-.metro.focus{
-    color:#666;
+.metro.focus {
+    color: #666;
 }
 /* OLD SELECT (HIDDEN) */
-.metro .old{
-    position: absolute;
-    left: 0;
-    top: 0;
+.metro .old {
     height: 0;
-    width: 0;
-    overflow: hidden;
-}
-.metro select{
-    position: absolute;
-    left: 0px;
-    top: 0px;
-}
-.metro.touch select{
     left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 0;
+}
+.metro select {
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+.metro.touch select {
+    height: 100%;
+    left: 0;
+    opacity: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    opacity: 0;
 }
 /* SELECTED FEEDBACK ITEM */
 .metro .selected {
     color: #96a6a7;
 }
-.metro .selected:hover{
-    color:#e94e38;
+.metro .selected:hover {
+    color: #e94e38;
 }
 .metro .selected,
-.metro li{
+.metro li {
+    color: #555555;
     display: block;
-    padding: 8px 0px 8px 0px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 13px;
     overflow: hidden;
-    white-space: nowrap;
+    padding: 8px 0 8px 6px;
     text-align: left;
     text-transform: uppercase;
-    font-size: 14px;
-    line-height: 13px;
-    padding-left: 6px;
-    font-weight: 400;
-    color: #555555;
+    white-space: nowrap;
 }
-/* .focus class is also added on hover */
+/* FOCUS CLASS IS ALSO ADDED ON HOVER */
 .metro:hover .selected::after, .metro.focus .selected::after {
-    background: url(../images/p_minus.png) no-repeat 0px 10px;
+    background: url(../images/p_minus.png) no-repeat 0 10px;
 }
-.metro li:hover{
-    background-color:#ECEB4D;
+.metro li:hover {
+    background-color: #ECEB4D;
 }
-.metro li:hover{
-    background-color:#ECEB4D;
+.metro li:hover {
+    background-color: #ECEB4D;
 }
-.metro li.focus{
-    background:#ECEB4D;
+.metro li.focus {
+    background: #ECEB4D;
+    color: #000;
     position: relative;
     z-index: 3;
-    color:#000;
 }
-.metro li.active{
-    background-color:#ECEB4D;
+.metro li.active {
+    background-color: #ECEB4D;
     color: #000;
 }
-.metro .selected::after{
+.metro .selected::after {
+    background: url(../images/p_plus.png) no-repeat 0 10px;
+    bottom: 0;
     content: '';
+    padding: 6px;
     position: absolute;
     right: 0;
     top: 0;
-    bottom: 0;
-    padding:6px;
-    background:url(../images/p_plus.png) no-repeat 0px 10px;
 }
 .metro:hover .selected::after,
-.metro.focus .selected::after{
-    background:url(../images/p_minus.png) no-repeat 0px 10px;
+.metro.focus .selected::after {
+    background: url(../images/p_minus.png) no-repeat 0 10px;
 }
 /* DROP DOWN WRAPPER */
-.metro div{
-    position: absolute;
+.metro div {
+    color: #FFF;
     height: 0;
     left: 0;
+    margin-top: 1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
     right: 0;
     top: 100%;
-    margin-top:1px;
-    overflow: hidden;
-    opacity: 0;
-    color: #FFF;
 }
-/* Height is adjusted by JS on open */
-.metro.open div{
+/* HEIGHT IS ADJUSTED BY JS ON OPEN */
+.metro.open div {
     opacity: 1;
     z-index: 2;
 }
 /* FADE OVERLAY FOR SCROLLING LISTS */
-.metro.scrollable div::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
+.metro.scrollable div::after {
     bottom: 0;
+    content: '';
     height: 50px;
+    left: 0;
+    position: absolute;
+    right: 0;
 }
-.metro.scrollable.bottom div::after{
+.metro.scrollable.bottom div::after {
     opacity: 0;
 }
 /* DROP DOWN LIST */
-.metro ul{
-    position: absolute;
-    left: 0;
-    top: 0;
+.metro ul {
+    background: #000;
     height: 100%;
-    width: 100%;
-    padding:0;
+    left: 0;
     list-style: none;
     overflow: hidden;
-    background:#000;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
-.metro.scrollable.open ul{
+.metro.scrollable.open ul {
     overflow-y: auto;
 }
 /* DROP DOWN LIST ITEMS */
-.metro li{
-    list-style: none;
-    padding: 6px 10px;
+.metro li {
+    color: #fff;
     font-size: 1em;
     font-weight: 400;
+    list-style: none;
+    padding: 6px 10px;
     text-transform: lowercase;
-    color: #fff;
 }
 .metro li:last-child {
     border-bottom: 0;
 }
 .checkbox i {
-    position: absolute;
-    bottom: 255px;
-    left: 14.9%;
-    display: block;
-    width: 20px;
-    height: 20px;
-    outline: none;
     border: 2px solid #D2CF99;
+    bottom: 255px;
+    display: block;
+    height: 20px;
+    left: 14.9%;
+    outline: none;
+    position: absolute;
+    width: 20px;
 }
-.checkbox{
-    margin-top:0;
+.checkbox {
+    margin-top: 0;
+}
+.product_right {
+    margin-bottom: 2em;
 }
